# ov-client

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  Info.plist  Jenkinsfile  Makefile  README.md  build_and_run_osx.sh  build_osx.sh  changelog  htchstorage.mk  icon.icns  installovclient.sh  jackrec.html  make_portable.sh  ovclient.css  ovclient.js  showver  start_all.sh  start_env.sh  start_ov-client.sh  start_ovbox.sh  webmixer.js
.github/actions/archlinux/: entrypoint.sh
.github/workflows/: archlinux.yml  c-cpp.yml  macos-12.yml  macos-13.yml  macos-14.yml  macos-15.yml  macos-16.yml  macos-make.yml  macos.yml  miniaudio_macos.yml  test_docker_arm64.yml  ubuntu-2004.yml  ubuntu-2204.yml  ubuntu-2404-arm.yml  ubuntu-2404.yml  ubuntu-2604.yml  ubuntu-latest.yml  windows.yml
buildactions/archlinux/: Dockerfile  entrypoint.sh
cmake/: FindSNDFILE.cmake
cmake/modules/: FindSoundIo.cmake
doc/: doxygen.cfg
docker/: Makefile  README.md
docker/archlinux/: Dockerfile  entrypoint.sh
docker/debian/: Dockerfile  entrypoint.sh
docker/fedora/: Dockerfile  entrypoint.sh
docker/ubuntu1804/: Dockerfile  entrypoint.sh
docker/ubuntu2004/: Dockerfile
docker/ubuntu2010/: Dockerfile  entrypoint.sh
docker/ubuntu2104/: Dockerfile
docker/ubuntu2110/: Dockerfile
docker/ubuntu2204/: Dockerfile  entrypoint.sh
docker/ubuntu2204nogui/: Dockerfile  entrypoint.sh
ovboxheadtracker/: ads1115_glab.h  ovboxheadtracker.ino
packaging/Darwin/: Info.plist  Makefile  install_dependencies.sh  mkport.sh  ov-client.csv  ovbox.csv  ovboxwrapper  pack.sh
packaging/deb/: Makefile  htchdebian-mkdeb  ov-client-gui.control  ov-client-gui.csv  ov-client-gui.dep  ov-client.csv  ov-client.dep  ovbox-cli.control  ovbox-cli.csv  ovbox.desktop  ovclient.control  ovclient.dep
packaging/homebrew/: Makefile  ovbox_homebrew_postinstall
packaging/homebrew/ovbox.app/Contents/: Info.plist
packaging/homebrew/ovbox.app/Contents/MacOS/: wrapper-script
packaging/win/: Makefile  copy_files.sh  ov-client.csv  ovbox.bat
pingstats/: README.md  datalogging.tsc  plot_pinghist.m
src/: RSJparser.tcc  callerlist.cc  callerlist.h  common.cc  common.h  errmsg.cc  errmsg.h  listsoundcards_mac.cc  mactools.cc  mactools.h  ov-client.cc  ov-client_hostname.cc  ov-client_listsounddevs.cc  ov-headtracker.cc  ov-server.cc  ov_client_digitalstage.cc  ov_client_digitalstage.h  ov_client_orlandoviols.cc  ov_client_orlandoviols.h  ov_ds_service.cc  ov_ds_service.h  ov_render_tascar.cc  ov_render_tascar.h  ov_tools.cc  ov_tools.h  ov_types.cc  ov_types.h  ovbox.cc  ovbox.glade  ovbox.icns  ovbox.res  ovbox_cli.cc  ovbox_sendlog.cc  ovbox_version.cc  ovboxclient.cc  ovboxclient.h  ovc_tascar_ver.cc  ovrealpath.c  soundcardtools.cc  soundcardtools.h  (+6 more)
tools/: README.md  build_and_install_debian.sh  gethwdelay.sh  install_ovclient.sh  install_pi5  prepareimage.sh  prepareimage_pi5.sh
tools/pi/: autorun  autorun_pi5
zita/: .gitignore
zita-njbridge-0.4.4/: .gitignore  CMakeLists.txt
zita-resampler-1.8.0/: .gitignore  CMakeLists.txt  README
zita-resampler-1.8.0/apps/: audiofile.h
zita-resampler-1.8.0/docs/: resampler.html
zita-resampler-1.8.0/source/: resampler-table.cc  resampler.cc  vresampler.cc
zita-resampler-1.8.0/source/zita-resampler/: resampler-table.h  resampler.h  vresampler.h
zita-resampler-1.8.0/test/: jackproc.cc  lfqueue.cc  lfqueue.h  speedtest.cc  upstest.cc  vspeedtest.cc
zita/zita-njbridge-0.4.4/: .gitignore  CMakeLists.txt  README  zita-n2j
zita/zita-njbridge-0.4.4/cmake/: FindJACK.cmake
zita/zita-njbridge-0.4.4/source/: Makefile  libzita-resampler.so.1.6.2
zita/zita-njbridge-0.4.4/zita-resampler/: CMakeLists.txt  Makefile
zita/zita-njbridge-0.4.4/zita-resampler/apps/: audiofile.cc  dither.cc
zita/zita-njbridge-0.4.4/zita-resampler/source/: cresampler.cc
zita/zita-njbridge-0.4.4/zita-resampler/source/zita-resampler/: vresampler.h
zita/zita-resampler-1.6.2/: .gitignore  CMakeLists.txt
zita/zita-resampler-1.6.2/apps/: Makefile  dither.h  zresample.1  zresample.cc  zretune.1  zretune.cc
zita/zita-resampler-1.6.2/source/: Makefile
